--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </section>
 <!--X and Os -->
 <div>
-<i class="fa-solid fa-user"></i>
-<i class="fa-solid fa-0"></i>
+<i id='x' class="fa-solid fa-user"></i>
+<i id='o'class="fa-solid fa-0"></i>
 </div>
     <script src="tictac.js"></script>
 </body>
