--- a/index.html
+++ b/index.html
@@ -9,28 +9,25 @@
 </head>
 <body>
     <h1>A game of wits </h1>
+    <hr>
+    <br>
     <main class="container">
-        <section class="board">
-            <div id="num1" class="block"></div>
-            <div id="num2" class="block"></div>
-            <div id="num3" class="block"></div>
-            <div id="num4" class="block"></div>
-            <div id="num5" class="block"></div>
-            <div id="num6" class="block"></div>
-            <div id="num7" class="block"></div>
-            <div id="num8" class="block"></div>
-            <div id="num9" class="block"></div>
+        <section class="board" id="board">
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
+            <div class="block"></div>
         </section>
     </main>
     <section class="footer">
-    <h2>Player WINS!!</h2>
-    <button>Reset</button>
+    <h2><!--display--></h2>
+    <button id="play" onclick="play_again()">Play Again</button>
 </section>
-<!--X and Os -->
-<div>
-<i id='x' class="fa-solid fa-user"></i>
-<i id='o'class="fa-solid fa-0"></i>
-</div>
     <script src="tictac.js"></script>
 </body>
 </html>
