--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 <body>
     <h1>A game of wits </h1>
     <hr>
+    <h2 class="game--stat"></h2>
     <br>
     <main class="container">
         <section class="board" id="board">
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
+            <div class="block" id="0"></div>
+            <div class="block" id="1"></div>
+            <div class="block" id="2"></div>
+            <div class="block" id="3"></div>
+            <div class="block" id="4"></div>
+            <div class="block" id="5"></div>
+            <div class="block" id="6"></div>
+            <div class="block" id="7"></div>
+            <div class="block" id="8"></div>
         </section>
     </main>
     <section class="footer">
-    <h2><!--display--></h2>
-    <button id="play" onclick="play_again()">Play Again</button>
+
+    <button id="play">Play Again</button>
 </section>
     <script src="tictac.js"></script>
 </body>
